maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: ';' expected but '(' found.
    if(!aMurNord(x,y)){setIndication(x,y-1,i+1):indication(x,y-1,i+1)}
                                                          ^JediEscaper:10: error: ';' expected but '(' found.
    if(y>0&&!aMurNord(x,y-1)){setIndication(x,y+1,i+1):indication(x,y+1,i+1)}
                                                                 ^JediEscaper:11: error: ';' expected but '(' found.
    if(!aMurOuest(x,y)){setIndication(x-1,y,i+1):indication(x-1,y,i+1)}
                                                           ^JediEscaper:12: error: ';' expected but '(' found.
    if(x<getMondeLargeur()-1 && !aMurOuest(x+1,y)){setIndication(x+1,y,i+1):indication(x+1,y,i+1)}
                                                                                      ^